--- a/templates/pages/community.html
+++ b/templates/pages/community.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}Community{% endblock %}
+{% block body_class %}page__community{% endblock %}
 
 {% macro speak_kotlin_link(href, text, class, comment=None) %}
     <div class="all-speak-kotlin_link _{{ class }}" data-svg-id="{{ class.replace('-', '_') }}">
@@ -16,27 +17,17 @@
 
 {% block content %}
     <article role="main" class="page-content">
-        <h1 id="were-all-kotlin">We're all Kotlin</h1>
+        <h1 class="kto-header kto-header_size_l" id="were-all-kotlin">Join the community to learn and get new connections!</h1>
         <p>
-            Every day there is more and more activity around Kotlin, and we want to help foster and grow the community
-            in any way we can. Here you can find online resources, as well as offline events and talks in your area.
-            And if you can't find one, create one. We're here to help!
-
+            Every day there is more and more activity around Kotlin, and we want to help foster
+            and grow the community in any way we can. Here you can find online resources and
+            information about activities in your area. If you can't find one, create one! JetBrains
+            is here to help and support
         </p>
 
-        <h2 id="kotlin-real-life-activities">Kotlin Real-life Activities</h2>
+        <!--  -->
 
-        <ol>
-            <li><strong>Local Kotlin User Groups</strong> are a place to share experience between Kotlin programmers
-                and to get newcomers excited about the language. Successful user groups typically hold regular meetings.
-            </li>
-            <li><strong>Kotlin Nights</strong> are one-off events that usually include 3-4 talks on Kotlin.
-                The talks should be dedicated to technology, either to Kotlin or to some other compatible approaches,
-                and not be focused on marketing, sales or product promotion.
-            </li>
-        </ol>
-
-        <h2 id="kotlin-online-resources">Kotlin Online Resources</h2>
+        <h2 class="kto-header kto-header_size_m" id="kotlin-online-resources">Keep in touch</h2>
         <div>
             <div class="all-speak-kotlin">
                 <div class="all-speak-kotlin_links _left">
@@ -57,16 +48,15 @@
                 </div>
             </div>
         </div>
-<!--
-        <h2 id="kotlin-community-resources">Community-Maintained Resources</h2>
 
-        <ol>
-            <li><a href="https://kotlin.link/">Kotlin.link</a> — almost a complete list of links to Kotlin projects, libraries and other resources</li>
-            <li><a href="http://www.kotlinweekly.net/">Kotlin Weekly</a> — a weekly mailing list containing latest notable news and articles</li>
-            <li><a href="https://twitter.com/dailykotlin">The daily Kotlin</a> — Daily Kotlin news and tips</li>
-            <li><a href="https://kotlin-jobs.com/">Kotlin Jobs</a> — available jobs for Kotlin Developers </li>
-        </ol>
--->
+        <h2 class="kto-header kto-header_size_m" id="kotlin-online-resources">Code of Conduct</h2>
+        <p>
+            Follow these simple rules to collaborate efficiently: be kind, be someone that other
+            people want to be around, do not insult or be rude to other attendees. Kotlin User
+            Groups should provide a friendly, safe and welcoming environment for all,
+            regardless of gender, sexual orientation, ability, ethnicity, socioeconomic status,
+            and religion (or lack there of)
+        </p>
     </article>
 
     <div class="scroll-down-hint"
