--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -34,7 +34,7 @@
                     {% set domain_link = get_domain(news.link) %}
                     <a class="kotlin-news-section-news__item" href="{{ news.link }}"{% if domain_link %} target="_blank"{% endif %}>
                         <span class="kotlin-news-section-news__title">
-                            {{ news.title }}<span class="kotlin-news-section-news__title-arrow">&nbsp;→</span>
+                            <span class="kotlin-news-section-news__title-text">{{ news.title }}</span>&nbsp;<span class="kotlin-news-section-news__title-arrow">→</span>
                         </span>
                         <span class="kotlin-news-section-news__tag">
                             {% if news.tag %}{{ news.tag }}
