--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -18,5 +18,7 @@
 @import 'page/multi-language-samples.scss';
 
 @import 'static/js/components/kto-button.scss';
+@import 'static/js/components/kto-header.scss';
+@import 'static/js/components/kto-tabs.scss';
 
 @import url("//resources.jetbrains.com/storage/ui/logos/logos.css");
