--- a/static/css/com/page-content/page-content.scss
+++ b/static/css/com/page-content/page-content.scss
@@ -105,3 +105,23 @@
         background-image: url("../layout/images/icon_404.svg");
     }
 }
+
+.page_next .page-content {
+    font-family: Inter, Arial, sans-serif;
+    color: #27282C;
+
+    a {
+        color: #6B70FC;
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+
+    p {
+        font-size: 18px;
+        line-height: 28px;
+        margin: 24px 0;
+    }
+}
