--- a/templates/pages/community.html
+++ b/templates/pages/community.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}Community{% endblock %}
-{% block body_class %}page__community page_next{% endblock %}
+{% block body_class %}page__community{% endblock %}
 
 {% macro speak_kotlin_link(href, text, class, comment=None) %}
     <div class="all-speak-kotlin_link _{{ class }}" data-svg-id="{{ class.replace('-', '_') }}">
@@ -16,7 +16,7 @@
 {% endmacro %}
 
 {% block content %}
-    <article role="main" class="page-content">
+    <article role="main" class="page-content page-content_next">
         <h1 class="kto-header kto-header_size_l" id="were-all-kotlin">Join the community to learn and get new connections!</h1>
         <p>
             Every day there is more and more activity around Kotlin, and we want to help foster
