--- a/templates/inc/head.html
+++ b/templates/inc/head.html
@@ -26,8 +26,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="apple-touch-icon" sizes="144x144"
       href="{{ url_for('asset', path='images/apple-touch-icon-144x144.png') }}"/>
 
-<link rel="stylesheet" href="{{ url_for('static', filename='styles.css')|autoversion }}">
-
 <!-- Social Media tag Starts -->
 <!-- Place this data between the <head> tags of your website -->
 <!-- Open Graph data -->
@@ -53,3 +51,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {% endif %}
 <meta name="twitter:image:src" content="https://kotlinlang.org{{ url_for('asset', path='images/twitter-card/kotlin_800x320.png') }}">
 <!-- Social Media tag Ends -->
+
+{% if restyled %}{% set styles_css='styles-v2.css' %}
+{% else %}{% set styles_css='styles.css' %}{% endif %}
+
+<link rel="stylesheet" href="{{ url_for('static', filename=styles_css)|autoversion }}">
