fixup! fixup! fixup! fixup! community

--- a/static/css/com/nav/docs-nav.scss
+++ b/static/css/com/nav/docs-nav.scss
@@ -2,8 +2,12 @@
 @import '../../_utils';
 
 .docs-nav-new {
-    margin-top: -20px;
+    margin-top: 25px;
     margin-bottom: $unit*6;
+
+    & + .page-content {
+        margin-bottom: 90px;
+    }
 }
 
 .docs-nav {
