fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! community

--- a/static/css/com/page-content/page-content-v2.scss
+++ b/static/css/com/page-content/page-content-v2.scss
@@ -39,6 +39,16 @@ a:hover {
     margin-bottom: 24px;
 }
 
+
+.typo-h3 {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: -0.01em;
+    margin-top: 32px;
+    margin-bottom: 24px;
+}
+
 .typo-list__item {
     margin-bottom: 30px;
 }
