--- a/static/js/page/community/community.scss
+++ b/static/js/page/community/community.scss
@@ -20,6 +20,12 @@
   display: none;
 }
 
+.community-usergroup-list__big-para {
+  margin: 96px 0 48px;
+  font-size: 31px;
+  line-height: 42px;
+}
+
 .community-kugrun {
   display: flex;
 
