--- a/templates/pages/community.html
+++ b/templates/pages/community.html
@@ -30,15 +30,16 @@
         <ul class="page-community-panels page-community__panels">
             <li class="page-community-panels__item page-community-panels__item_type_makethkug">
                 <p class="page-community-panels__para">Join Kotlin User Group  or start your own</p>
-                <a href="" class="kto-button kto-button_size_s kto-button_mode_outline">Start a new KUG</a>
+                <a href="https://surveys.jetbrains.com/s3/submit-a-local-kotlin-user-group" target="_blank"
+                   class="kto-button kto-button_size_s kto-button_mode_outline">Start a new KUG</a>
             </li>
             <li class="page-community-panels__item page-community-panels__item_type_events">
                 <p class="page-community-panels__para">Get Inspired at Kotlin event  or host one yourself</p>
-                <a href="" class="kto-button kto-button_size_s kto-button_mode_outline">Get support</a>
+                <a href="/community/events.html" class="kto-button kto-button_size_s kto-button_mode_outline">Get support</a>
             </li>
             <li class="page-community-panels__item page-community-panels__item_type_contribution">
                 <p class="page-community-panels__para">Contribute to the language and ecosystem</p>
-                <a href="" class="page-community-panels__link">Contributor guidelines</a>
+                <a href="/foundation/language-committee-guidelines.html" class="page-community-panels__link">Contributor guidelines</a>
             </li>
         </ul>
 
