fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! community

--- a/static/css/styles-v2.scss
+++ b/static/css/styles-v2.scss
@@ -8,6 +8,7 @@
 @import 'com/layout/footer.scss';
 @import 'com/nav/nav.scss';
 @import 'com/page-content/page-content-v2.scss';
+@import 'com/events-table/events-table.scss';
 
 @import url("//resources.jetbrains.com/storage/ui/logos/logos.css");
 
