update community section: overview, user group list, guidelines and support

--- a/templates/pages/community.html
+++ b/templates/pages/community.html
@@ -19,23 +19,20 @@
 
 {% block content %}
     <article role="main" class="page-content page-content_next">
-        <h1 class="kto-header kto-header_size_l" id="were-all-kotlin">Join the community to learn and get new connections!</h1>
+        <h1 class="kto-header kto-header_size_l" id="were-all-kotlin">Get involved in the community!</h1>
         <p>
-            Every day there is more and more activity around Kotlin, and we want to help foster
-            and grow the community in any way we can. Here you can find online resources and
-            information about activities in your area. If you can't find one, create one! JetBrains
-            is here to help and support
+            Each day brings more activity and excitement related to Kotlin, and we want to support the community and help it grow in any way we can. Here you can find online resources and information about activities in your area.
         </p>
 
         <ul class="page-community-panels page-community__panels">
             <li class="page-community-panels__item page-community-panels__item_type_makethkug">
-                <p class="page-community-panels__para">Join Kotlin User Group  or start your own</p>
-                <a href="https://surveys.jetbrains.com/s3/submit-a-local-kotlin-user-group" target="_blank"
-                   class="kto-button kto-button_size_s kto-button_mode_outline">Start a new KUG</a>
+                <p class="page-community-panels__para">Join Kotlin User Groups movement</p>
+                <a href="/community/user-groups.html" target="_blank"
+                   class="kto-button kto-button_size_s kto-button_mode_outline">Find a KUG</a>
             </li>
             <li class="page-community-panels__item page-community-panels__item_type_events">
-                <p class="page-community-panels__para">Get Inspired at Kotlin event  or host one yourself</p>
-                <a href="/community/events.html" class="kto-button kto-button_size_s kto-button_mode_outline">Get support</a>
+                <p class="page-community-panels__para">Find inspiration at a Kotlin event or host one yourself</p>
+                <a href="/community/events.html" class="kto-button kto-button_size_s kto-button_mode_outline">Join in!</a>
             </li>
             <li class="page-community-panels__item page-community-panels__item_type_contribution">
                 <p class="page-community-panels__para">Contribute to the language and ecosystem</p>
@@ -64,15 +61,6 @@
                 </div>
             </div>
         </div>
-
-        <h2 class="kto-header kto-header_size_m" id="kotlin-online-resources">Code of Conduct</h2>
-        <p>
-            Follow <a href="/contribute.html">these simple rules</a> to collaborate efficiently: be kind, be someone that other
-            people want to be around, do not insult or be rude to other attendees. Kotlin User
-            Groups should provide a friendly, safe and welcoming environment for all,
-            regardless of gender, sexual orientation, ability, ethnicity, socioeconomic status,
-            and religion (or lack there of)
-        </p>
     </article>
 
     <div class="scroll-down-hint"
