fixup! community section update: kotlin-nights branding and guidelines, user groups support and list

--- a/static/css/com/page-content/page-content-v2.scss
+++ b/static/css/com/page-content/page-content-v2.scss
@@ -24,6 +24,10 @@ a:hover {
     max-width: 100%;
 }
 
+.kto-header, .typo-header {
+    @extend %header;
+}
+
 .typo-h1 {
     font-weight: bold;
     font-size: 45px;
