--- a/templates/pages/community.html
+++ b/templates/pages/community.html
@@ -24,21 +24,20 @@
             Each day brings more activity and excitement related to Kotlin, and we want to support the community and help it grow in any way we can. Here you can find online resources and information about activities in your area.
         </p>
 
-        <ul class="page-community-panels page-community__panels">
-            <li class="page-community-panels__item page-community-panels__item_type_makethkug">
+        <div class="page-community-panels page-community__panels">
+            <a href="/community/user-groups.html" target="_blank"
+               class="page-community-panels__item page-community-panels__item_type_makethkug">
                 <p class="page-community-panels__para">Join Kotlin User Groups movement</p>
-                <a href="/community/user-groups.html" target="_blank"
-                   class="kto-button kto-button_size_s kto-button_mode_outline">Find a KUG</a>
-            </li>
-            <li class="page-community-panels__item page-community-panels__item_type_events">
+            </a>
+            <a href="/community/events.html"
+               class="page-community-panels__item page-community-panels__item_type_events">
                 <p class="page-community-panels__para">Find inspiration at a Kotlin event or host one yourself</p>
-                <a href="/community/events.html" class="kto-button kto-button_size_s kto-button_mode_outline">Join in!</a>
-            </li>
-            <li class="page-community-panels__item page-community-panels__item_type_contribution">
+            </a>
+            <a href="/foundation/language-committee-guidelines.html"
+               class="page-community-panels__item page-community-panels__item_type_contribution">
                 <p class="page-community-panels__para">Contribute to the language and ecosystem</p>
-                <a href="/foundation/language-committee-guidelines.html" class="page-community-panels__link">Contributor guidelines</a>
-            </li>
-        </ul>
+            </a>
+        </div>
 
         <h2 class="kto-header kto-header_size_m" id="kotlin-online-resources">Keep in touch</h2>
         <div>
