--- a/static/js/components/kto-button.scss
+++ b/static/js/components/kto-button.scss
@@ -153,6 +153,7 @@ a.kto-button:hover, a.kto-button:focus, a.kto-button:active {
 .kto-button_mode_outline:hover {
   border-color: rgba(39, 40, 44, 0.7);
   background: #F5F5F5;
+  color: #27282C;
 }
 
 .kto-button_mode_outline:active {
