--- a/templates/community.html
+++ b/templates/community.html
@@ -1,6 +1,10 @@
 {% set restyled=True %}
 {% extends 'base.html' %}
 
+{% block title %}Community{% endblock %}
+
+{% block body_class %}page__community{% endblock %}
+
 {% block content %}
     <div class="g-grid">
         <article role="main" class="page-content g-9">
