fixup! fixup! fixup! chore; finalize community

--- a/static/css/com/page-content/page-content-v2.scss
+++ b/static/css/com/page-content/page-content-v2.scss
@@ -85,6 +85,10 @@ a {
     margin-bottom: 25px;
 }
 
+.typo-float-right {
+    float: right;
+}
+
 .js-side-tree-nav {
     font-size: 14px;
     line-height: 24px;
